--- a/src/components/AuthNavigation/AuthNavigation.module.css
+++ b/src/components/AuthNavigation/AuthNavigation.module.css
@@ -1,9 +1,14 @@
+.navigation__list {
+    display: flex;
+    gap: 10px;
+}
+
 .link {
   display: inline-block;
   text-decoration: none;
   padding: 12px;
   font-weight: 700;
-  color: #2a363b;
+  color: #f69c02;
 }
 
 .link.active {
