--- a/src/index.css
+++ b/src/index.css
@@ -1,10 +1,17 @@
 @import-normalize; /* bring in normalize.css styles */
 
+html {
+  height: 100vh;
+}
+
 body {
   margin: 0;
+  height: 100vh;
+  background-color: #000;
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
     'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
     sans-serif;
+  line-height: 1.5;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
 }
@@ -12,4 +19,40 @@ body {
 code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
+}
+
+h1,
+h2,
+h3,
+h4,
+h5,
+h6,
+p {
+  margin: 0;
+}
+
+ul,
+ol {
+  margin: 0;
+  padding: 0;
+  list-style: none;
+}
+
+img {
+  display: block;
+  max-width: 100%;
+  height: auto;
+}
+
+a {
+  list-style: none;
+  text-decoration: none;
+}
+
+main {
+  max-height: (100vh - 91px);
+}
+
+#root {
+  height: 100vh;
 }
