--- a/src/components/LoginForm/LoginForm.module.css
+++ b/src/components/LoginForm/LoginForm.module.css
@@ -1,9 +1,46 @@
 .form {
-  width: 320px;
+  display: flex;
+  flex-direction: column;
+  margin: 0 auto;
+  margin-bottom: 20px;
+  padding: 20px;
+  min-width: 320px;
+
+  border: 1px solid #f69c02;
+  border-radius: 10px;
 }
 
 .label {
+  margin-bottom: 8px;
+}
+
+.input {
+  height: 30px;
+  padding-left: 15px;
+  margin-bottom: 20px;
+
+  border-radius: 10px;
+}
+
+.button {
   display: flex;
-  flex-direction: column;
-  margin-bottom: 16px;
+  justify-content: center;
+  align-items: center;
+  width: 200px;
+  height: 50px;
+  margin: 0 auto;
+
+  font-size: 20px;
+
+  background-color: #939393;
+  border: none;
+  border-radius: 10px;
+
+  transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  cursor: pointer;
+}
+
+.button:hover,
+.button:focus {
+  background-color: #f69c02;
 }
