--- a/src/index.css
+++ b/src/index.css
@@ -7,18 +7,19 @@ html {
 body {
   margin: 0;
   height: 100vh;
-  background-color: #000;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
+
+  color: var(--accent-color);
+
+  background-color: var(--primary-dark-color);
+  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen', 'Ubuntu',
+    'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue', sans-serif;
   line-height: 1.5;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
 }
 
 code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
+  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New', monospace;
 }
 
 h1,
@@ -29,10 +30,10 @@ h5,
 h6,
 p {
   margin: 0;
+  padding: 0;
 }
 
-ul,
-ol {
+ul {
   margin: 0;
   padding: 0;
   list-style: none;
@@ -50,27 +51,29 @@ a {
 }
 
 main {
-  max-height: (100vh - 91px);
+  /* max-height: (100vh - 91px); */
+  height: 100%;
 }
 
 #root {
-  height: 100vh;
+  height: 100%;
 }
 
 a {
-  color: #939393;
+  color: var(--bg-button-color);
 
-  transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1), transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  transition: color var(--transition-duration) var(--transition-timing-function),
+    transform var(--transition-duration) var(--transition-timing-function);
 }
 
 a:hover,
 a:focus {
-  color: #f69c02;
+  color: var(--accent-color);
   transform: scale(1.1);
 }
 
 .active {
-  color: #f69c02;
+  color: var(--accent-color);
   transform: scale(1.1);
 }
 
