--- a/src/components/Form/Form.module.css
+++ b/src/components/Form/Form.module.css
@@ -6,20 +6,8 @@
   padding: 20px;
   min-width: 320px;
 
-  border: 1px solid #f69c02;
-  border-radius: 10px;
-}
-
-.label {
-  margin-bottom: 8px;
-}
-
-.input {
-  height: 30px;
-  padding-left: 15px;
-  margin-bottom: 20px;
-
-  border-radius: 10px;
+  border: 1px solid var(--accent-color);
+  border-radius: var(--border-radius);
 }
 
 .button {
@@ -32,15 +20,15 @@
 
   font-size: 20px;
 
-  background-color: #939393;
+  background-color: var(--bg-button-color);
   border: none;
-  border-radius: 10px;
+  border-radius: var(--border-radius);
 
-  transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  transition: background-color var(--transition-duration) var(--transition-timing-function);
   cursor: pointer;
 }
 
 .button:hover,
 .button:focus {
-  background-color: #f69c02;
+  background-color: var(--accent-color);
 }
