--- a/src/components/Input/Input.module.css
+++ b/src/components/Input/Input.module.css
@@ -3,9 +3,15 @@
 }
 
 .input {
-  height: 30px;
+  height: 40px;
   padding-left: 15px;
-  margin-bottom: 20px;
+  padding-right: 15px;
 
   border-radius: 10px;
+
+  outline: none;
+}
+
+.input:not(:last-child) {
+  margin-bottom: 20px;
 }
