--- a/src/components/ContactItem/ContactItem.module.css
+++ b/src/components/ContactItem/ContactItem.module.css
@@ -4,8 +4,8 @@
   align-items: center;
   padding: 10px;
 
-  border: 1px solid #f69c02;
-  border-radius: 10px;
+  border: 1px solid var(--accent-color);
+  border-radius: var(--border-radius);
 }
 
 .contactItem:not(:last-child) {
@@ -22,6 +22,11 @@
   margin-bottom: 0;
 }
 
+.buttonContainer {
+  display: flex;
+  gap: 8px;
+}
+
 .button {
   display: flex;
   justify-content: center;
@@ -29,14 +34,14 @@
   width: 30px;
   height: 30px;
 
-  background-color: #939393;
+  background-color: var(--bg-button-color);
   border: none;
   border-radius: 50%;
 
-  transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  transition: background-color var(--transition-duration) var(--transition-timing-function);
   cursor: pointer;
 }
 
 .button:hover {
-  background-color: #f69c02;
+  background-color: var(--accent-color);
 }
