--- a/src/styles/variables.css
+++ b/src/styles/variables.css
@@ -1,7 +1,8 @@
 :root {
-  --accent-color: #f69c02;
+  --accent-color: #f79e03;
   --primary-dark-color: #000;
-  --bg-button-color: #939393;
+  --bg-button-color: #949494;
+  --backdrop: rgba(148, 148, 148, 0.5);
 
   --border-radius: 10px;
 
