--- a/src/components/Header/Header.module.css
+++ b/src/components/Header/Header.module.css
@@ -8,6 +8,9 @@
 }
 
 .header__container {
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
   padding: 0 20px;
   height: 100%;
 }
