--- a/src/components/Form/Form.module.css
+++ b/src/components/Form/Form.module.css
@@ -4,31 +4,18 @@
   margin: 0 auto;
   margin-bottom: 20px;
   padding: 20px;
-  min-width: 320px;
 
   border: 1px solid var(--accent-color);
   border-radius: var(--border-radius);
 }
 
 .button {
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  width: 200px;
+  max-width: 320px;
   height: 50px;
+  padding: 0 15px;
   margin: 0 auto;
 
   font-size: 20px;
 
-  background-color: var(--bg-button-color);
-  border: none;
   border-radius: var(--border-radius);
-
-  transition: background-color var(--transition-duration) var(--transition-timing-function);
-  cursor: pointer;
-}
-
-.button:hover,
-.button:focus {
-  background-color: var(--accent-color);
 }
