--- a/src/components/NavList/NavList.module.css
+++ b/src/components/NavList/NavList.module.css
@@ -1,5 +1,17 @@
 .navigation__list {
   display: flex;
+  flex-direction: column;
   align-items: center;
-  gap: 30px;
+  gap: 10px;
+
+  @media screen and (min-width: 640px) {
+    flex-direction: row;
+    gap: 30px;
+  }
+}
+
+.navigation__list:not(:last-child) {
+  @media screen and (max-width: 639px) {
+    margin-bottom: 10px;
+  }
 }
