--- a/src/components/NavList/NavListItem/NavListItem.module.css
+++ b/src/components/NavList/NavListItem/NavListItem.module.css
@@ -1,6 +1,9 @@
 .link {
-  display: inline-block;
   text-decoration: none;
-  padding: 12px 0;
   font-weight: 700;
+
+  @media screen and (min-width: 640px) {
+    display: inline-block;
+    padding: 12px 0;
+  }
 }
