--- a/src/components/SideBar/SideBar.module.css
+++ b/src/components/SideBar/SideBar.module.css
@@ -3,10 +3,18 @@
   top: 0;
   left: 0;
 
-  width: 20vw;
+  min-width: 200px;
+  width: 45vw;
   height: 100vh;
-  padding: 50px 24px;
+  padding: 20px 15px;
 
   border-right: 1px solid var(--accent-color);
   background-color: var(--primary-dark-color);
+}
+
+.userBar {
+  margin-bottom: 10px;
+  padding-bottom: 10px;
+
+  border-bottom: 1px solid var(--accent-color);
 }
