--- a/src/components/UserMenu/UserMenu.module.css
+++ b/src/components/UserMenu/UserMenu.module.css
@@ -1,39 +1,30 @@
-.user-menu {
+.userMenu {
   display: flex;
-  align-items: center;
+  flex-direction: column;
   gap: 15px;
+
+  @media screen and (min-width: 640px) {
+    flex-direction: row;
+    align-items: center;
+    text-align: right;
+  }
 }
 
-.user-name {
-  font-weight: 700;
+.userName {
   margin-bottom: 3px;
+  font-weight: 700;
 }
 
-.user-email {
+.userEmail {
   font-size: 14px;
   font-weight: 500;
-  text-align: right;
 }
 
 .button {
-  display: flex;
-  justify-content: center;
-  align-items: center;
   width: 100px;
   height: 30px;
-  margin: 0 auto;
 
   font-size: 16px;
 
-  background-color: #939393;
-  border: none;
-  border-radius: 10px;
-
-  transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
-  cursor: pointer;
-}
-
-.button:hover,
-.button:focus {
-  background-color: #f69c02;
+  border-radius: var(--border-radius);
 }
