--- a/src/components/Form/Form.module.css
+++ b/src/components/Form/Form.module.css
@@ -1,11 +1,13 @@
 .form {
   display: flex;
   flex-direction: column;
-  margin: 0 auto;
+  /* margin: 0 auto;
   margin-bottom: 20px;
-  padding: 20px;
+  padding: 20px; */
+  /* padding-top: 50px;
+  padding-bottom: 50px; */
 
-  border: 1px solid var(--accent-color);
+  /* border: 1px solid var(--accent-color); */
   border-radius: var(--border-radius);
 }
 
