--- a/src/index.css
+++ b/src/index.css
@@ -1,8 +1,12 @@
 @import-normalize;
 
+html,
+body {
+  height: 100%;
+}
+
 body {
   margin: 0;
-  height: 100vh;
 
   color: var(--accent-color);
 
@@ -12,6 +16,24 @@ body {
   line-height: 1.5;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+}
+
+body::-webkit-scrollbar {
+  width: 8px;
+}
+
+body::-webkit-scrollbar-track {
+  border-radius: var(--border-radius);
+  background-color: var(--bg-button-color-opacity);
+}
+
+body::-webkit-scrollbar-thumb {
+  border-radius: var(--border-radius);
+  background-color: var(--bg-button-color);
+}
+
+body::-webkit-scrollbar-thumb:hover {
+  background-color: var(--accent-color);
 }
 
 code {
@@ -53,6 +75,8 @@ button {
 
   transition: background-color var(--transition-duration) var(--transition-timing-function);
   cursor: pointer;
+
+  outline: none;
 }
 
 button:hover,
@@ -74,6 +98,31 @@ a:hover,
 a:focus {
   color: var(--accent-color);
   transform: scale(1.1);
+}
+
+#root {
+  min-height: 100%;
+  display: flex;
+  flex-direction: column;
+  /* height: 100%; */
+}
+
+main {
+  flex-grow: 1;
+  /* max-height: calc(100vh - (var(--header-height) + var(--footer-height))); */
+}
+
+.visually-hidden {
+  position: absolute;
+  white-space: nowrap;
+  width: 1px;
+  height: 1px;
+  overflow: hidden;
+  border: 0;
+  padding: 0;
+  clip: rect(0 0 0 0);
+  clip-path: inset(50%);
+  margin: -1px;
 }
 
 .active {
