--- a/src/index.css
+++ b/src/index.css
@@ -112,6 +112,14 @@ main {
   /* max-height: calc(100vh - (var(--header-height) + var(--footer-height))); */
 }
 
+.title {
+  margin-bottom: 30px;
+
+  font-weight: 500;
+  font-size: 48px;
+  text-align: center;
+}
+
 .visually-hidden {
   position: absolute;
   white-space: nowrap;
@@ -137,7 +145,9 @@ main {
 }
 
 .error,
-.info {
-  top: 75px;
-  right: 10px;
+.info,
+.success,
+.warning {
+  right: 50vw;
+  transform: translateX(50%);
 }
