--- a/src/components/SideBar/SideBar.module.css
+++ b/src/components/SideBar/SideBar.module.css
@@ -18,3 +18,7 @@
 
   border-bottom: 1px solid var(--accent-color);
 }
+
+.modalContentClose {
+  animation: modalContentB var(--transition-duration) var(--transition-timing-function);
+}
