--- a/src/components/Footer/Footer.module.css
+++ b/src/components/Footer/Footer.module.css
@@ -1,5 +1,12 @@
 .footer {
+  display: flex;
+  justify-content: center;
+  align-items: center;
   height: var(--footer-height);
 
   border-top: 1px solid var(--accent-color);
+}
+
+.copyright {
+  font-size: 20px;
 }
