change modal animation

--- a/src/components/Modal/Modal.module.css
+++ b/src/components/Modal/Modal.module.css
@@ -1,15 +1,11 @@
-.backdrop {
+.modal {
   position: fixed;
   top: 0;
   left: 0;
 
+  display: flex;
+  flex-direction: row-reverse;
+
   width: 100vw;
   height: 100vh;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  padding-left: 15px;
-  padding-right: 15px;
-
-  background-color: var(--backdrop);
 }
