--- a/src/components/SideBar/SideBar.module.css
+++ b/src/components/SideBar/SideBar.module.css
@@ -5,7 +5,7 @@
 
   min-width: 200px;
   width: 45vw;
-  height: 100vh;
+  height: 100%;
   padding: 20px 15px;
 
   border-right: 1px solid var(--accent-color);
