--- a/src/index.css
+++ b/src/index.css
@@ -1,4 +1,5 @@
 @import-normalize;
+@import './styles/animations.css';
 
 html,
 body {
@@ -142,64 +143,4 @@ main {
   justify-content: center;
   align-items: center;
   margin-top: 20px;
-}
-
-.modalOpen {
-  animation: modalA var(--transition-duration) var(--transition-timing-function);
-}
-
-.modalClose {
-  animation: modalB var(--transition-duration) var(--transition-timing-function);
-}
-
-.modalContentOpen {
-  animation: modalContentA var(--transition-duration) var(--transition-timing-function);
-}
-
-.modalContentClose {
-  animation: modalContentB var(--transition-duration) var(--transition-timing-function);
-}
-
-@keyframes modalA {
-  0% {
-    opacity: 0;
-  }
-
-  100% {
-    opacity: 1;
-  }
-}
-
-@keyframes modalB {
-  0% {
-    opacity: 1;
-  }
-
-  100% {
-    opacity: 0;
-  }
-}
-
-@keyframes modalContentA {
-  0% {
-    transform: translateX(-1500px) skewX(30deg) scaleX(1.3);
-  }
-  70% {
-    transform: translateX(30px) skewX(0deg) scaleX(0.9);
-  }
-  100% {
-    transform: translateX(0px) skewX(0deg) scaleX(1);
-  }
-}
-
-@keyframes modalContentB {
-  0% {
-    transform: translateX(0px) skewX(0deg) scaleX(1);
-  }
-  30% {
-    transform: translateX(-30px) skewX(-5deg) scaleX(0.9);
-  }
-  100% {
-    transform: translateX(1500px) skewX(30deg) scaleX(1.3);
-  }
 }
