--- a/src/index.css
+++ b/src/index.css
@@ -92,7 +92,8 @@ a {
   color: var(--bg-button-color);
 
   transition: color var(--transition-duration) var(--transition-timing-function),
-    transform var(--transition-duration) var(--transition-timing-function);
+    transform var(--transition-duration) var(--transition-timing-function),
+    border-color var(--transition-duration) var(--transition-timing-function);
 }
 
 a:hover,
@@ -105,12 +106,10 @@ a:focus {
   min-height: 100%;
   display: flex;
   flex-direction: column;
-  /* height: 100%; */
 }
 
 main {
   flex-grow: 1;
-  /* max-height: calc(100vh - (var(--header-height) + var(--footer-height))); */
 }
 
 .title {
@@ -142,5 +141,4 @@ main {
 .loader {
   justify-content: center;
   align-items: center;
-  margin-top: 20px;
 }
