--- a/src/components/Modal/ModalContent/ModalContent.module.css
+++ b/src/components/Modal/ModalContent/ModalContent.module.css
@@ -6,4 +6,16 @@
   background-color: var(--primary-dark-color);
   border: 1px solid var(--accent-color);
   border-radius: var(--border-radius);
+
+  animation: modalContentOpen var(--transition-duration) var(--transition-timing-function);
+}
+
+@keyframes modalContentOpen {
+  0% {
+    transform: translateX(-1500px);
+  }
+
+  100% {
+    transform: translateX(0px);
+  }
 }
